# sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
apps/api/: config.py  deps.py  main.py  middleware.py
apps/api/routes/: admin.py  health.py  webhooks.py
docs/: architecture.md
docs/learning/: README.md
docs/learning/concepts/: local-vs-production.md
docs/learning/database/: migrations.md  sqlalchemy.md
docs/learning/docker/: compose.md  volumes.md  why-docker.md
docs/learning/observability/: jaeger.md
docs/learning/tooling/: makefile.md  mypy.md  overview.md  ruff.md  uv.md
infra/: docker-compose.observability.yml  docker-compose.yml  prometheus.yml
migrations/: env.py
migrations/versions/: 20260525_1200_initial.py  20260526_2000_add_installation_id.py  20260527_2100_add_review_findings.py
tests/: conftest.py
tests/integration/: conftest.py  test_diff_analyzer_live.py  test_engine.py
tests/unit/: test_context.py  test_diff_analyzer.py  test_fetch_diff_step.py  test_health.py  test_llm_client.py  test_llm_pricing.py  test_llm_structured.py  test_noop.py  test_plan.py  test_retry_policy.py  test_shared_prefix.py  test_signature.py
